--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/cli": "^4.1.3",
     "@tailwindcss/vite": "^4.1.3",
     "expo": "^52.0.39",
+    "firebase": "^12.3.0",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
